--- a/common/pom.xml
+++ b/common/pom.xml
@@ -32,5 +32,10 @@
             <version>4.3.20.RELEASE</version>
             <scope>test</scope>
         </dependency>-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
     </dependencies>
 </project>
