--- a/common/pom.xml
+++ b/common/pom.xml
@@ -57,5 +57,10 @@
             <artifactId>spring-core</artifactId>
             <version>5.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.30</version>
+        </dependency>
     </dependencies>
 </project>
